kubernetes/apps/default/home-assistant/app/mdns-networkpolicy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
spec:
  endpointSelector:
    matchExpressions:
      - key: "app.kubernetes.io/name"
        operator: In
        values:
          - home-assistant
          - matter-server
  egress:
    # Multicast DNS
    - toCIDR:
        - 224.0.0.251/32
      toPorts:
        - ports:
            - port: "5353"
              protocol: UDP
    # Simple Service Discovery Protocol
    - toCIDR:
        - 239.255.255.250/32
        - 255.255.255.255/32
      toPorts:
        - ports:
            - port: "1900"
              protocol: UDP
  ingress:
    # Multicast DNS
    - fromEndpoints:
        - matchLabels:
            "reserved:host": ""
    - fromCIDR:
        - 224.0.0.251/32
      toPorts:
        - ports:
            - port: "5353"
              protocol: UDP
